--- a/mysql/mysql.yaml
+++ b/mysql/mysql.yaml
@@ -1,4 +1,16 @@
-
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pv-claim
+  labels:
+    app: mysql-server
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -27,6 +39,15 @@ spec:
               key: password.txt
         ports:
         - containerPort: 3306
+      # MOUNT VOLUME
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
+      volumes:
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: mysql-pv-claim
+      # MOUNT VOLUME
 ---
 kind: Service
 apiVersion: v1
