--- a/php/php.yaml
+++ b/php/php.yaml
@@ -1,3 +1,4 @@
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -30,6 +31,13 @@ spec:
               key: password.txt
         ports:
         - containerPort: 80
+        volumeMounts:
+        - mountPath: /data
+          name: data
+      volumes:
+      - name: data
+        persistentVolumeClaim:
+          claimName: 'my-pvc'
 ---
 kind: Service
 apiVersion: v1
